<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.AddActivity">

    <EditText
        android:id="@+id/editTextMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/introduceti_marca"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/introduceti_data"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextMarca"
        app:layout_constraintStart_toStartOf="@+id/editTextMarca"
        app:layout_constraintTop_toBottomOf="@+id/editTextMarca" />

    <EditText
        android:id="@+id/editTextPret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/introduceti_pretul"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextData"
        app:layout_constraintStart_toStartOf="@+id/editTextData"
        app:layout_constraintTop_toBottomOf="@+id/editTextData" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:entries="@array/culori"
        app:layout_constraintEnd_toEndOf="@+id/editTextPret"
        app:layout_constraintStart_toStartOf="@+id/editTextPret"
        app:layout_constraintTop_toBottomOf="@+id/editTextPret" />

    <RadioGroup
        android:id="@+id/RadioGroupEngine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GasolineRadioButton"
            android:text="@string/gasoline"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/HibridRadioButton"
            android:text="@string/hibrid"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ElectricRadioButton"
            android:text="@string/electric"/>
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/adauga_masini"
        app:layout_constraintEnd_toEndOf="@+id/RadioGroupEngine"
        app:layout_constraintStart_toStartOf="@+id/RadioGroupEngine"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupEngine" />

</androidx.constraintlayout.widget.ConstraintLayout>